RESOLVED FIXED247829
MouseClick offsetX/offsetY different between Safari 15.5 and Safari 16
https://bugs.webkit.org/show_bug.cgi?id=247829
Summary MouseClick offsetX/offsetY different between Safari 15.5 and Safari 16
Richard Robinson
Reported 2022-11-11 15:51:35 PST
When a foreign object is inside an SVG, any click event that occurs on the object has it's `offsetX` and `offsetY` relative to the SVG container rather than the element. Believed to be a regression from https://bugs.webkit.org/show_bug.cgi?id=234524 , which overrode `offsetFromContainer` in `RenderSVGBlock`, causing the `RenderSVGForeignObject` to use this override and return an offset of `(0, 0)` instead of its proper offset.
Attachments
Richard Robinson
Comment 1 2022-11-11 15:51:42 PST
Richard Robinson
Comment 2 2022-11-12 19:37:03 PST
EWS
Comment 3 2022-11-14 16:24:49 PST
Committed 256679@main (d5fba35fb6c5): <https://commits.webkit.org/256679@main> Reviewed commits have been landed. Closing PR #6436 and removing active labels.
Nikolas Zimmermann
Comment 4 2022-11-14 23:39:48 PST
Thanks! I had a PR open which also fixes offsetFromContainer(), good it is fixed already.
Note You need to log in before you can comment on or make changes to this bug.