Cherry-pick d5fba35fb6c5. rdar://problem/100517677

MouseClick offsetX/offsetY different between Safari 15.5 and Safari 16
    https://bugs.webkit.org/show_bug.cgi?id=247829
    rdar://100517677

    Reviewed by Simon Fraser.

    When a foreign object is inside an SVG, any click event that occurs on the
    object has it's offsetX and offsetY relative to the SVG container rather than
    the element, which is incorrect behavior.

    This is a regression from https://bugs.webkit.org/show_bug.cgi?id=234524,
    which overrode `offsetFromContainer` in `RenderSVGBlock`, causing the `RenderSVGForeignObject`
    to use this override and return an offset of `(0, 0)` instead of its proper offset.
    This value was then propogated within the calculation of the event's offset.

    This PR fixes this by creating an override of `offsetFromContainer` in `RenderSVGForeignObject`,
    which returns the correct offset of the foreign object, and so the event's
    offset location is now relative to the foreign object.

    * LayoutTests/fast/svg/foreign-object-offset-position-expected.txt: Added.
    * LayoutTests/fast/svg/foreign-object-offset-position.html: Added.
    * Source/WebCore/rendering/svg/LegacyRenderSVGForeignObject.cpp:
    (WebCore::LegacyRenderSVGForeignObject::offsetFromContainer const):
    * Source/WebCore/rendering/svg/LegacyRenderSVGForeignObject.h:

    Canonical link: https://commits.webkit.org/256679@main

Canonical link: https://commits.webkit.org/252432.915@safari-7614-branch